// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent base styles 1`] = `
{
  "parsed": {
    "textVariable": "text-color-surface",
  },
  "raw": "text-surface",
}
`;

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "baseStyles": {
    "parsed": {
      "textVariable": "text-color-surface",
    },
    "raw": "text-surface",
  },
  "variantConfig": {
    "defaultSize": "base",
    "defaultVariant": "body",
    "sizeClasses": {
      "base": "text-base",
      "lg": "text-lg",
      "sm": "text-sm",
      "xs": "text-xs",
    },
    "sizeDescriptions": {
      "base": "Default text size",
      "lg": "Large text",
      "sm": "Small text",
      "xs": "Extra small text",
    },
    "sizes": [
      "xs",
      "sm",
      "base",
      "lg",
    ],
    "variantClasses": {
      "body": "text-surface",
      "error": "text-error",
      "heading1": "text-3xl font-semibold",
      "heading2": "text-2xl font-semibold",
      "heading3": "text-lg font-semibold",
      "mono": "font-mono",
      "mono-secondary": "font-mono text-muted",
      "secondary": "text-muted",
      "success": "text-info",
    },
    "variantDescriptions": {
      "body": "Default body text",
      "error": "Error state text",
      "heading1": "Large heading for page titles",
      "heading2": "Medium heading for section titles",
      "heading3": "Small heading for subsections",
      "mono": "Monospace text for code",
      "mono-secondary": "Muted monospace text",
      "secondary": "Muted text for secondary information",
      "success": "Success state text",
    },
    "variants": [
      "heading1",
      "heading2",
      "heading3",
      "body",
      "secondary",
      "success",
      "error",
      "mono",
      "mono-secondary",
    ],
  },
  "variants": [
    {
      "combinedClasses": "text-surface text-3xl font-semibold",
      "description": "Large heading for page titles",
      "isCopyVariant": false,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 30,
        "fontWeight": 600,
        "textVariable": "text-color-surface",
      },
      "size": null,
      "sizeClasses": "",
      "variant": "heading1",
      "variantClasses": "text-3xl font-semibold",
    },
    {
      "combinedClasses": "text-surface text-2xl font-semibold",
      "description": "Medium heading for section titles",
      "isCopyVariant": false,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 24,
        "fontWeight": 600,
        "textVariable": "text-color-surface",
      },
      "size": null,
      "sizeClasses": "",
      "variant": "heading2",
      "variantClasses": "text-2xl font-semibold",
    },
    {
      "combinedClasses": "text-surface text-lg font-semibold",
      "description": "Small heading for subsections",
      "isCopyVariant": false,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 16,
        "fontWeight": 600,
        "textVariable": "text-color-surface",
      },
      "size": null,
      "sizeClasses": "",
      "variant": "heading3",
      "variantClasses": "text-lg font-semibold",
    },
    {
      "combinedClasses": "text-surface text-surface text-xs",
      "description": "Default body text. Extra small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 12,
        "textVariable": "text-color-surface",
      },
      "size": "xs",
      "sizeClasses": "text-xs",
      "variant": "body",
      "variantClasses": "text-surface",
    },
    {
      "combinedClasses": "text-surface text-surface text-sm",
      "description": "Default body text. Small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-surface",
      },
      "size": "sm",
      "sizeClasses": "text-sm",
      "variant": "body",
      "variantClasses": "text-surface",
    },
    {
      "combinedClasses": "text-surface text-surface text-base",
      "description": "Default body text. Default text size",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-surface",
      },
      "size": "base",
      "sizeClasses": "text-base",
      "variant": "body",
      "variantClasses": "text-surface",
    },
    {
      "combinedClasses": "text-surface text-surface text-lg",
      "description": "Default body text. Large text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 16,
        "textVariable": "text-color-surface",
      },
      "size": "lg",
      "sizeClasses": "text-lg",
      "variant": "body",
      "variantClasses": "text-surface",
    },
    {
      "combinedClasses": "text-surface text-muted text-xs",
      "description": "Muted text for secondary information. Extra small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 12,
        "textVariable": "text-color-muted",
      },
      "size": "xs",
      "sizeClasses": "text-xs",
      "variant": "secondary",
      "variantClasses": "text-muted",
    },
    {
      "combinedClasses": "text-surface text-muted text-sm",
      "description": "Muted text for secondary information. Small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-muted",
      },
      "size": "sm",
      "sizeClasses": "text-sm",
      "variant": "secondary",
      "variantClasses": "text-muted",
    },
    {
      "combinedClasses": "text-surface text-muted text-base",
      "description": "Muted text for secondary information. Default text size",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-muted",
      },
      "size": "base",
      "sizeClasses": "text-base",
      "variant": "secondary",
      "variantClasses": "text-muted",
    },
    {
      "combinedClasses": "text-surface text-muted text-lg",
      "description": "Muted text for secondary information. Large text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 16,
        "textVariable": "text-color-muted",
      },
      "size": "lg",
      "sizeClasses": "text-lg",
      "variant": "secondary",
      "variantClasses": "text-muted",
    },
    {
      "combinedClasses": "text-surface text-info text-xs",
      "description": "Success state text. Extra small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 12,
        "textVariable": "text-color-info",
      },
      "size": "xs",
      "sizeClasses": "text-xs",
      "variant": "success",
      "variantClasses": "text-info",
    },
    {
      "combinedClasses": "text-surface text-info text-sm",
      "description": "Success state text. Small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-info",
      },
      "size": "sm",
      "sizeClasses": "text-sm",
      "variant": "success",
      "variantClasses": "text-info",
    },
    {
      "combinedClasses": "text-surface text-info text-base",
      "description": "Success state text. Default text size",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-info",
      },
      "size": "base",
      "sizeClasses": "text-base",
      "variant": "success",
      "variantClasses": "text-info",
    },
    {
      "combinedClasses": "text-surface text-info text-lg",
      "description": "Success state text. Large text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 16,
        "textVariable": "text-color-info",
      },
      "size": "lg",
      "sizeClasses": "text-lg",
      "variant": "success",
      "variantClasses": "text-info",
    },
    {
      "combinedClasses": "text-surface text-error text-xs",
      "description": "Error state text. Extra small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 12,
        "textVariable": "text-color-error",
      },
      "size": "xs",
      "sizeClasses": "text-xs",
      "variant": "error",
      "variantClasses": "text-error",
    },
    {
      "combinedClasses": "text-surface text-error text-sm",
      "description": "Error state text. Small text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-error",
      },
      "size": "sm",
      "sizeClasses": "text-sm",
      "variant": "error",
      "variantClasses": "text-error",
    },
    {
      "combinedClasses": "text-surface text-error text-base",
      "description": "Error state text. Default text size",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-error",
      },
      "size": "base",
      "sizeClasses": "text-base",
      "variant": "error",
      "variantClasses": "text-error",
    },
    {
      "combinedClasses": "text-surface text-error text-lg",
      "description": "Error state text. Large text",
      "isCopyVariant": true,
      "isMonoVariant": false,
      "parsed": {
        "fontSize": 16,
        "textVariable": "text-color-error",
      },
      "size": "lg",
      "sizeClasses": "text-lg",
      "variant": "error",
      "variantClasses": "text-error",
    },
    {
      "combinedClasses": "text-surface font-mono text-sm",
      "description": "Monospace text for code. Default text (optically adjusted to small)",
      "isCopyVariant": false,
      "isMonoVariant": true,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-surface",
      },
      "size": null,
      "sizeClasses": "text-sm",
      "variant": "mono",
      "variantClasses": "font-mono",
    },
    {
      "combinedClasses": "text-surface font-mono text-base",
      "description": "Monospace text for code. Large text (optically adjusted to base)",
      "isCopyVariant": false,
      "isMonoVariant": true,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-surface",
      },
      "size": "lg",
      "sizeClasses": "text-base",
      "variant": "mono",
      "variantClasses": "font-mono",
    },
    {
      "combinedClasses": "text-surface font-mono text-muted text-sm",
      "description": "Muted monospace text. Default text (optically adjusted to small)",
      "isCopyVariant": false,
      "isMonoVariant": true,
      "parsed": {
        "fontSize": 13,
        "textVariable": "text-color-muted",
      },
      "size": null,
      "sizeClasses": "text-sm",
      "variant": "mono-secondary",
      "variantClasses": "font-mono text-muted",
    },
    {
      "combinedClasses": "text-surface font-mono text-muted text-base",
      "description": "Muted monospace text. Large text (optically adjusted to base)",
      "isCopyVariant": false,
      "isMonoVariant": true,
      "parsed": {
        "fontSize": 14,
        "textVariable": "text-color-muted",
      },
      "size": "lg",
      "sizeClasses": "text-base",
      "variant": "mono-secondary",
      "variantClasses": "font-mono text-muted",
    },
  ],
}
`;

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed styles for body variant with base size 1`] = `
{
  "fontSize": 14,
  "textVariable": "text-color-surface",
}
`;

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed styles for heading1 variant 1`] = `
{
  "fontSize": 30,
  "fontWeight": 600,
  "textVariable": "text-color-surface",
}
`;

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed styles for mono variant 1`] = `
{
  "fontSize": 13,
  "textVariable": "text-color-surface",
}
`;

exports[`Text Generator - Snapshot Tests (Intermediate Data) > should produce consistent variant config from registry 1`] = `
{
  "defaultSize": "base",
  "defaultVariant": "body",
  "sizeClasses": {
    "base": "text-base",
    "lg": "text-lg",
    "sm": "text-sm",
    "xs": "text-xs",
  },
  "sizeDescriptions": {
    "base": "Default text size",
    "lg": "Large text",
    "sm": "Small text",
    "xs": "Extra small text",
  },
  "sizes": [
    "xs",
    "sm",
    "base",
    "lg",
  ],
  "variantClasses": {
    "body": "text-surface",
    "error": "text-error",
    "heading1": "text-3xl font-semibold",
    "heading2": "text-2xl font-semibold",
    "heading3": "text-lg font-semibold",
    "mono": "font-mono",
    "mono-secondary": "font-mono text-muted",
    "secondary": "text-muted",
    "success": "text-info",
  },
  "variantDescriptions": {
    "body": "Default body text",
    "error": "Error state text",
    "heading1": "Large heading for page titles",
    "heading2": "Medium heading for section titles",
    "heading3": "Small heading for subsections",
    "mono": "Monospace text for code",
    "mono-secondary": "Muted monospace text",
    "secondary": "Muted text for secondary information",
    "success": "Success state text",
  },
  "variants": [
    "heading1",
    "heading2",
    "heading3",
    "body",
    "secondary",
    "success",
    "error",
    "mono",
    "mono-secondary",
  ],
}
`;
